--- a/VesselScreeningApp/package.json
+++ b/VesselScreeningApp/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.6",
+    "@react-native-community/picker": "^1.6.5",
     "react": "16.9.0",
     "react-native": "^0.63.1",
     "react-native-datepicker": "^1.7.2",
